# IU5-Monopoly

./: .gitignore  CMakeLists.txt  README.md  main.cpp  menu
Board/: Board.cpp  Board.hpp  CMakeLists.txt  Cards.cpp  Cards.hpp  Cells.cpp  Cells.hpp
Interface/: CMakeLists.txt  Game.cpp  Game.hpp  Interface.cpp  Interface.hpp  Menu.cpp  Menu.hpp  Slider.cpp  Slider.hpp
Players/: CMakeLists.txt  Dice.cpp  Dice.hpp  GameLogic.cpp  Player.cpp  Player.hpp  Players.cpp  Players.hpp
